@@ -16,6 +16,10 @@ Enhancements::
 * add `index-column-gap` key to theme to control size of gap between columns
 * coerce `image-caption-max-width` to `fit-content` if `float` attribute is set on block image (#2150)
 
+Improvements::
+
+* configure spacing around thematic break using `thematic-break-padding` key instead of margin top and bottom (#2164)
+
 Bug Fixes::
 
 * honor `caption-align` when element align is not `left` and `caption-max-width` is % of element width (e.g., `fit-content(50%)`) (#2156)
@@ -25,6 +29,7 @@ Bug Fixes::
 * preserve columns on subsequent pages in the index section (#2149)
 * fix return value of `cursor` method inside block for column box in index section
 * correctly detect preceding code block when determining whether to collapse top margin of colist
+* apply bottom margin to thematic break that falls at top of page (#2164)
 
 == 2.0.0.beta.1 (2022-05-04) - @mojavelinux
 
